# RT_Rendering_Lab

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
archive/Illusion/: ImGuiBuild.cpp
assets/shaders/: ForwardLit.glsl  ShadowDepth.glsl  TexturePreview.glsl
docs/: design-input-event-system.md  material_system_design.md  next-steps.md  renderTarget_design.md  roadmap.md
docs/en/: roadmap.md
docs/en/demos/: shadow-mapping.md
docs/zh-CN/: README.zh-CN.md  roadmap.zh-CN.md
docs/zh-CN/demos/: shadow-mapping.zh-CN.md
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.h  Base.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Time.cpp  Time.h  Window.cpp  Window.h
src/demos/: DemoBase.h  DemoRegistry.cpp  DemoRegistry.h  LabLayer.cpp  LabLayer.h
src/demos/ShadowMapping/: ShadowMapping.cpp  ShadowMapping.h
src/graphics/: Buffers.cpp  Buffers.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  RenderCommand.cpp  RenderCommand.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/renderer/: RenderContext.h  RenderItem.h  SceneRenderer.cpp  SceneRenderer.h  SceneRendererTypes.h
src/renderer/passes/: ForwardPass.cpp  ForwardPass.h  RenderPass.h  ShadowPass.cpp  ShadowPass.h  TexturePreviewPass.cpp  TexturePreviewPass.h
src/scene/: Camera.cpp  Camera.h  DebugCameraController.cpp  DebugCameraController.h  Light.h  SceneData.h  Transform.h
tests/: CMakeLists.txt
tests/integration/: TestFramebuffer.cpp  TestRenderTarget.cpp  TestShader.cpp  TestTexture.cpp
tests/support/: GLTestContext.cpp  GLTestContext.h  MathTestUtils.h  TestLayer.h
tests/unit/: TestBuffers.cpp  TestCamera.cpp  TestDefaultCameraController.cpp  TestLayerStack.cpp  TestSpecifications.cpp  TestTime.cpp  TestTransform.cpp
